Implemented Refresh Token concept in server js for NOTES API

--- a/BackendDevelopment/Level1/Revision-Mini-Projects/Notes-API-Mini-Project/.env
+++ b/BackendDevelopment/Level1/Revision-Mini-Projects/Notes-API-Mini-Project/.env
@@ -1,3 +1,4 @@
 PORT = 8080
-SECRET_KEY = "abcdef1234"
+ACCESS_SECRET_KEY = "abcdef1234"
+REFRESH_SECRET_KEY = "qwerty1234"
 MONGODB_URL = "mongodb://localhost:27017/"
